--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.vlandscaper">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- Always needed for AR. -->
+    <uses-permission android:name="android.permission.CAMERA" /> <!-- Sceneform requires OpenGLES 3.0 or later. -->
+    <uses-feature
+        android:glEsVersion="0x00030000"
+        android:required="true" />
+    <!--
+ Indicates that this app requires Google Play Services for AR ("AR Required") and results in
+         the app only being visible in the Google Play Store on devices that support ARCore.
+         For an "AR Optional" app, remove this tag.
+    -->
+    <uses-feature
+        android:name="android.hardware.camera.ar"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -10,7 +23,23 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.VLandScaper">
+        android:theme="@style/Theme.VLandScaper"
+        tools:targetApi="31">
+        <activity
+            android:name=".activities.ManualLandscapingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.VirtualObjectActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.VirtualLandscapingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.DetailDesignActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.LandscapingDesign"
+            android:exported="false" />
         <activity
             android:name=".activities.NotificationActivity"
             android:exported="false" />
@@ -52,6 +81,14 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+        <!--
+ Indicates that this app requires Google Play Services for AR ("AR Required") and causes
+        the Google Play Store to download and intall Google Play Services for AR along with the app.
+        For an "AR Optional" app, specify "optional" instead of "required".
+        -->
+        <meta-data
+            android:name="com.google.ar.core"
+            android:value="required" />
     </application>
 
 </manifest>
